added format to home page

--- a/index/index.html
+++ b/index/index.html
@@ -1,12 +1,21 @@
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="/style/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+   <div id="topTitle">El Corazon De Popotla</div>
+   <div >
+    <img  id="titleImage" src="/images/popotlafish.jpg" alt="">
+   </div>
+   <div id="botomNav">
+    <nav>
+        <p>Request Informaton</p>
+    </nav>
+   </div>
+
 </body>
 </html>
