tested different styles for the main page

--- a/index/index.html
+++ b/index/index.html
@@ -1,5 +1,8 @@
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/style/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +10,29 @@
     <title>Document</title>
 </head>
 <body>
-   <div id="topTitle">El Corazon De Popotla</div>
-   <div >
-    <img  id="titleImage" src="/images/popotlafish.jpg" alt="">
-   </div>
-   <div id="botomNav">
-    <nav>
-        <p>Request Informaton</p>
-    </nav>
-   </div>
+    <div class="homepage_title">
+        <h1><b>El Corazon De Popotla</b></h1>
+      </div>
+    
+  <div class="wrapper">
+    <div class="box1">One</div>
+    <div class="box2">Two</div>
+    <div class="box3">Three</div>
+  </div>
+
+  <div class="homepage_picture">
+    <img src="/images/popotlafish.jpg" alt="">
+  </div>
+ 
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
